--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ keywords = ["embedded", "embassy", "microbit"]
 categories = ["embedded"]
 
 [dependencies]
+cortex-m-rt = "0.7.5"
+defmt-rtt = "0.4.1"
+embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "task-arena-size-32768"] }
+panic-probe = { version = "0.3.2", features = ["print-defmt"] }
 
 
 [lints.rust]
