--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,5 +2,5 @@
 # https://rust-lang.github.io/rustup-components-history
 [toolchain]
 channel = "stable"
-components = ["rust-src", "rustfmt"]
+components = ["rust-src", "rustfmt", "llvm-tools"]
 targets = ["thumbv7em-none-eabihf"]
