--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,24 @@ keywords = ["embedded", "embassy", "microbit"]
 categories = ["embedded"]
 
 [dependencies]
+cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.5"
+defmt = "0.3.8"
 defmt-rtt = "0.4.1"
-embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers", "task-arena-size-32768"] }
+embassy-executor = { version = "0.6.3", features = [
+    "arch-cortex-m",
+    "defmt",
+    "executor-interrupt",
+    "executor-thread",
+    "integrated-timers",
+    "task-arena-size-32768",
+] }
+embassy-futures = "0.1.1"
+embassy-time = { version = "0.3.2", features = [
+    "defmt-timestamp-uptime",
+    "defmt",
+] }
+microbit-bsp = { git = "https://github.com/lulf/microbit-bsp", version = "0.4.1" }
 panic-probe = { version = "0.3.2", features = ["print-defmt"] }
 
 
@@ -30,3 +45,6 @@ unused = { level = "warn", priority = -1 }
 [lints.clippy]
 cargo = "warn"
 pedantic = "warn"
+
+[profile.release]
+debug = 2
