--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - run: cargo fmt -- --check
-      - run: cargo clippy --workspace --all-features --all-targets
+      - run: cargo clippy
